--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -54,7 +54,8 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, embedded C++), build system implementation (CMake, Python, BAT, Bash), unit test infrastructure bring-up (CppUTest), documentation support (Doxygen). The module is provided as cross-platform and multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers covering: Visual Studio, GCC, MinGW and IAR.
 \item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering. The protocol is included as part of TM and is used for customer devices communication as is.
 \item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker} container.
-\item Review of the circuits design for customer's projects.
+\item Embedded Linux device drivers and applications implementation.
+\item EE design review for customer's projects.
 \item Various \textit{peripheral}-specific hardware activities. \newline
 \item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform with \textit{MIPS} core.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
@@ -63,7 +64,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \item \textit{Peripheral} domain support. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support for smear correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic voltage management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
 \end{rCompany}
-\begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
 \item Applied hardware development start-up.
 \item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
 \item Transformerless vacuum tube stereo amplifier prototying for headphones. \newline Simple SRPP cascade and preamplifier per channel.
@@ -96,7 +97,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 %%%%  KEYWORDS  %%%%
 
 \begin{rSection}{Keywords}
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, Mac gOS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 \end{rSection}
 
 %%%%  HOBBY AND INTERESTS  %%%%
