Source re-format

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -1,28 +1,40 @@
-%%%%  HEADER  %%%%
-
 \documentclass{template}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \name{Vladimir Ivanov}
-\address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \ \textbar \ \ \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
+
+\address{
+    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
+    \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
+    \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
+
 \address{\em Vladivostok, Maritime Province, Russia}
 
 \begin{document}
 
-%%%%  SUMMARY  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Summary}
-Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience through hardware and software codesign. Strong skills in electrical engineering, computer science and research area. Ability to produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication, computer networks and more.
+
+Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience
+through hardware and software codesign. Strong skills in electrical engineering, computer science and research area.  Ability to
+produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team
+of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment,
+telecommunication, computer networks and more.
+
 \end{rSection}
 
-%%%%  EDUCATION  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Education}
+
 {\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
 M.Sc. Department of General Physics and Electronics. \newline
 \href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline 
-GPA: 3.63/4.
+GPA: 3.63/4
 
-{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
+{\bf \href{ http://www.school51.pupils.ru }{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
 Secondary education. \newline
 Indepth study of Japanese Language. \newline
 GPA: 3.80/4
@@ -31,84 +43,152 @@ GPA: 3.80/4
 General education. \newline
 Indepth study of Japanese Language. \newline
 GPA: 3.86/4
+
 \end{rSection}
 
-%%%%  CERTIFICATES  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Certificates}
 \begin{rItemize}
-\item Two-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}{\textquotedblleft 6.00.1x: Introduction to CS and Programming\textquotedblright}. Excellent passing grade. \newline
-The online learning initiative of Harvard University and MIT, December 2013.
-\item Three-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}{\textquotedblleft 6.002x: Circuits and Electronics\textquotedblright}. Maximum passing grade. \newline
-The online learning initiative of Harvard University and MIT, June 2012.
+
+\item Two-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}
+      {\textquote{6.00.1x: Introduction to CS and Programming}}. Excellent passing grade. \newline
+      The online learning initiative of Harvard University and MIT, December 2013.
+\item Three-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}
+      {\textquote{6.002x: Circuits and Electronics}}. Maximum passing grade. \newline
+      The online learning initiative of Harvard University and MIT, June 2012.
 \item Course of Japanese Language. The course of 1150 hours and a number of final exams. \newline
-Secondary school 51, Vladivostok, 1995 -- 2005.
+      Secondary school 51, Vladivostok, 1995 -- 2005.
+
 \end{rItemize}
 \end{rSection}
 
-%%%%  EXPERIENCE  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Experience}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RU}
+
 \item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC with \textit{ARM Cortex-A} core.
-\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, embedded C++), build system implementation (CMake, Python, BAT, Bash), unit test infrastructure bring-up (CppUTest), documentation support (Doxygen). The module is provided as cross-platform and multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers covering: Visual Studio, GCC, MinGW and IAR.
-\item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering. The protocol is included as part of TM and is used for customer devices communication as is.
-\item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker} container.
+\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development
+      cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, embedded C++), build system implementation (CMake, Python,
+      BAT, Bash), unit test infrastructure bring-up (CppUTest), documentation support (Doxygen). The module is provided as cross-platform and
+      multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and
+      TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers
+      covering: Visual Studio, GCC, MinGW and IAR.
+\item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering.
+      The protocol is included as part of TM and is used for customer devices communication as is.
+\item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker}
+      container.
 \item Embedded Linux device drivers and applications implementation.
 \item EE design review for customer's projects.
 \item Various \textit{peripheral}-specific hardware activities. \newline
 \item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform with \textit{MIPS} core.
-\item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
+\item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras,
+      mobile driver recorders, action cameras, etc).
 \item Support sites are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Solving of time critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
-\item \textit{Peripheral} domain support. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support for smear correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic voltage management based on PID-controller.
+\item Solving of time critical project issues under a customer's pressure. Resolved a number of various \textquote{MP block} software and hardware
+      problems. Improved processing performance of UI images for customer's projects.
+\item \textit{Peripheral} domain support. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support for smear
+      correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing optimizations. Display cluster: issues related to
+      video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral: support for
+      usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug
+      fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic
+      voltage management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
+
 \end{rCompany}
 \begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
+
 \item Applied hardware development start-up.
 \item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
 \item Transformerless vacuum tube stereo amplifier prototying for headphones. \newline Simple SRPP cascade and preamplifier per channel.
-\item Prototype of the \textquotedblleft Power over Ethernet\textquotedblright \ injector design and manufacturing. Physical layer of the IEEE 802.3af specification was implemented. The product was used in a number of computer network projects.
-\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by \href{http://www.linear.com}{Linear Technology Corp}.
+\item Prototype of the \textquote{Power over Ethernet} injector design and manufacturing. Physical layer of the IEEE
+      802.3af specification was implemented. The product was used in a number of computer network projects.
+\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by
+      \href{http://www.linear.com}{Linear Technology Corp}.
+
 \end{rCompany}
 \end{rSection}
 
-%%%%  SKILLS  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Skills}
 \begin{rItemize}
-\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust, Go.
-\item \textbf{\textit{HW development}} \newline Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components: excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD, Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and impulse circuits.
-\item \textbf{\textit{Debugging}} \newline Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems. In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function generator, autotransformer and more.
-\item \textbf{\textit{Languages}} \newline Russian -- native \newline English -- professional working proficiency \newline \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
-\item \textbf{\textit{Miscellaneous}} \newline Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks. Experience in transferring of knowledges to students: electronics and programming foundations.
+
+\item \textbf{\textit{SW development}}
+
+      Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on
+      assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom.
+      Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. Unit
+      test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator,
+      Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt.
+      Progressive system languages: Rust, Go.
+
+\item \textbf{\textit{HW development}}
+
+      Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components:
+      excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD,
+      Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and
+      impulse circuits.
+
+\item \textbf{\textit{Debugging}}
+
+      Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems.
+      In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope,
+      function generator, autotransformer and more.
+
+\item \textbf{\textit{Languages}}
+
+      Russian -- native \newline
+      English -- professional working proficiency \newline
+      \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
+
+\item \textbf{\textit{Miscellaneous}}
+
+      Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks. Experience in
+      transferring of knowledges to students: electronics and programming foundations.
+
 \end{rItemize}
 \end{rSection}
 
-%%%%  PUBLICATIONS  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Publications}
 \begin{rItemize}
-\item Ivanov V. \textquotedblleft Diagnostic system of the motor drive module for the underwater robot\textquotedblright. Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
-\item Ivanov V. \textquotedblleft Automated speed control of the motor shaft\textquotedblright. Bachelor thesis. \newline Institute of Physics and Information Technologies FEFU. Vladivostok, May 2009.
+
+\item Ivanov V. \textquote{Diagnostic system of the motor drive module for the underwater robot}. Master thesis. \newline
+      Institute of Marine Technology Problems FEB RAS. Vladivostok, June 2010.
+\item Ivanov V. \textquote{Automated speed control of the motor shaft}. Bachelor thesis. \newline
+      Institute of Physics and Information Technologies FEFU. Vladivostok, May 2009.
+
 \end{rItemize}
 \end{rSection}
 
-%%%%  KEYWORDS  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Keywords}
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, Mac gOS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
+
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CLion, CMake, Code Collaborator,
+Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber,
+Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb,
+Linux, Make, Maxima, MCS-51, Mac gOS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon,
+PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC,
+Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack,
+zlib
+
 \end{rSection}
 
-%%%%  HOBBY AND INTERESTS  %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Hobby and Interests}
 \begin{rHobby}
+
 \item Hi-Tech and impacting one on a human being, designing hardware and software
 \item Physics, applied math, world economic
 \item Professional sports leagues: NHL, NFL, MLB
 \item Swimming (sports category), marine multi-athlon (sports category)
 \item Cooking, electronic music
+
 \end{rHobby}
 \end{rSection}
 
