--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -31,7 +31,7 @@ telecommunication, computer networks and more.
 
 {\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
 M.Sc. Department of General Physics and Electronics. \newline
-\href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline 
+\href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline
 GPA: 3.63/4
 
 {\bf \href{ http://www.school51.pupils.ru }{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
@@ -66,7 +66,7 @@ GPA: 3.86/4
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Experience}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RU}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer, full-time}{Vladivostok, RU}
 
 \item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC with \textit{ARM Cortex-A} core.
 \item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development
@@ -97,7 +97,7 @@ GPA: 3.86/4
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer, full-time}{Vladivostok, RUS}
 
 \item Applied hardware development start-up.
 \item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
@@ -171,7 +171,7 @@ GPA: 3.86/4
 1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CLion, CMake, Code Collaborator,
 Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber,
 Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb,
-Linux, Make, Maxima, MCS-51, Mac gOS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon,
+Linux, Make, Maxima, MCS-51, Mac OS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon,
 PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC,
 Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack,
 zlib
@@ -188,6 +188,7 @@ zlib
 \item Professional sports leagues: NHL, NFL, MLB
 \item Swimming (sports category), marine multi-athlon (sports category)
 \item Cooking, electronic music
+\item Speedcubing, podcasting
 
 \end{rHobby}
 \end{rSection}
