--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -81,7 +81,8 @@ GPA: 3.86/4
       container.
 \item Embedded Linux device drivers and applications implementation.
 \item EE design review for customer's projects.
-\item Various \textit{peripheral}-specific hardware activities. \newline
+\item Business trip to \href{http://www.flextronics.com}{Flextronics International}: Plano, TX, United States. Collaboration with electrical and
+      mechanical engineers to bring up initial prototype for the new imaging product. \newline
 \item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform with \textit{MIPS} core.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras,
       mobile driver recorders, action cameras, etc).
