--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -5,7 +5,7 @@
 \name{Vladimir Ivanov}
 
 \address{
-    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
+    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$0934 \textbar \
     \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
     \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
 
@@ -98,7 +98,7 @@ GPA: 3.86/4
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer, full-time}{Vladivostok, RUS}
+\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer, full-time}{Vladivostok, RU}
 
 \item Applied hardware development start-up.
 \item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
