--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -2,39 +2,43 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\name{Vladimir Ivanov}
+\name{Vladimir Yu. Ivanov}
 
 \address{
-    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$0934 \textbar \
-    \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
-    \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
+      \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
+      \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
+      \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}
+}
 
-\address{\em Vladivostok, Maritime Province, Russia}
+\address{
+      \em Vladivostok, Maritime Province, Russia
+}
 
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{Summary}
+\begin{rSection}{summary}
 
-Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience
-through hardware and software codesign. Strong skills in electrical engineering, computer science and research area.  Ability to
+Proficient skilled worker with a focus on the EECS: 6+ years in embedded systems design. I have built own experience
+through hardware and software codesign. Strong skills in electrical engineering, computer sciences and researching. Ability to
 produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team
-of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment,
-telecommunication, computer networks and more.
+of professionals and to lead own product from nothing till mass production. Main areas of interest: consumer electronics, robotics,
+automotive and game industry, medical equipment, telecommunications, computer networks, internet of things, indoor navigation and more.
+Looking for new opportunities to continue the career.
 
 \end{rSection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{Education}
+\begin{rSection}{education}
 
 {\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
 M.Sc. Department of General Physics and Electronics. \newline
 \href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline
 GPA: 3.63/4
 
-{\bf \href{ http://www.school51.pupils.ru }{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
+{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
 Secondary education. \newline
 Indepth study of Japanese Language. \newline
 GPA: 3.80/4
@@ -48,13 +52,13 @@ GPA: 3.86/4
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{Certificates}
+\begin{rSection}{certificates}
 \begin{rItemize}
 
-\item Two-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}
+\item 2-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}
       {\textquote{6.00.1x: Introduction to CS and Programming}}. Excellent passing grade. \newline
       The online learning initiative of Harvard University and MIT, December 2013.
-\item Three-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}
+\item 3-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}
       {\textquote{6.002x: Circuits and Electronics}}. Maximum passing grade. \newline
       The online learning initiative of Harvard University and MIT, June 2012.
 \item Course of Japanese Language. The course of 1150 hours and a number of final exams. \newline
@@ -65,89 +69,101 @@ GPA: 3.86/4
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{Experience}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer, full-time}{Vladivostok, RU}
+\begin{rSection}{main experience}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer (full-time)}{Vladivostok, RU}
 
-\item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC with \textit{ARM Cortex-A} core.
-\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development
-      cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, embedded C++), build system implementation (CMake, Python,
-      BAT, Bash), unit test infrastructure bring-up (CppUTest), documentation support (Doxygen). The module is provided as cross-platform and
-      multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and
-      TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers
-      covering: Visual Studio, GCC, MinGW and IAR.
-\item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering.
-      The protocol is included as part of TM and is used for customer devices communication as is.
-\item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker}
-      container.
-\item Embedded Linux device drivers and applications implementation.
-\item EE design review for customer's projects.
-\item Business trip to \href{http://www.flextronics.com}{Flextronics International}: Plano, TX, United States. Collaboration with electrical and
-      mechanical engineers to bring up initial prototype for the new imaging product. \newline
-\item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform with \textit{MIPS} core.
-\item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras,
-      mobile driver recorders, action cameras, etc).
-\item Support sites are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Solving of time critical project issues under a customer's pressure. Resolved a number of various \textquote{MP block} software and hardware
-      problems. Improved processing performance of UI images for customer's projects.
-\item \textit{Peripheral} domain support. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support for smear
-      correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing optimizations. Display cluster: issues related to
-      video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral: support for
-      usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug
-      fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic
+\item Camera SDK development team member for digital imaging products based on \href{http://www.ambarella.com}{\textit{Ambarella}} SoC.
+\item Full independent development cycle of the Transport Module (TM) within SDK team: presentation of the design plan and architecture
+      (Mind Maps, UML), initial implementation (plain C, C++), build system design (CMake, Python, BAT, Bash), UT infrastructure bring up
+      (CppUTest), documentation support (Doxygen). The TM is used to autotest SDK functionality in QA lab via RPC and for factory acceptance
+      testing of the customer's products on production lines. The module is provided as cross-platform and multi-transport library with C-style
+      asynchronous API which transparently covers UART, USB and TCP/IP data exchange capabilities. The TM is integrated by application engineers
+      on Windows, Linux and customer's platforms (ARM, ThreadX, embedded Linux) using wide range of supported (cross)compilers (Visual Studio,
+      GCC, MinGW, IAR).
+\item Data link layer protocol design and implementation for physical layers without data delivery guarantee to transparently integrate this
+      capability via dedicated API (e.g. TM in case of data exchange over UART).
+\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} factories (TX, United States).
+      Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT project phases:
+      \href{https://www.nanit.com}{\textit{Nanit}} (baby monitor, Linux based product), \href{https://fusar.com}{\textit{Fusar}} (motorcycle
+      DVR), \href{http://www.glide.me}{\textit{Glide}} (Apple Watch wristcam, rigid-flex boards).
+\item Peripheral domain support as the member of SDK sub-team: embedded Linux and RTOS device drivers, FW burning tool features (Qt application)
+      for QA lab, EE and PCB design review for customer's projects.
+\item \href{http://www.csr.com}{\textit{CSR}} contractor. Distributed support of the embedded software for ODM/OEM customers based on \textit{COACH}
+      (Camera On A Chip) SoC with MIPS core.
+      Main brand manufacturers of imaging devices: \href{http://www.nikon.com}{\textit{Nikon}}, \href{http://www.pentax.com}{\textit{Pentax}},
+      \href{http://www.garmin.com}{\textit{Garmin}}, \href{http://www.samsung.com}{\textit{Samsung}}, \href{http://www.fujifilm.com}{\textit{Fujifilm}},
+      \href{http://www.abilitycorp.com.tw}{\textit{Ability}}. Support sites are located in a number of countries: China, Israel, Japan, Russia,
+      South Korea, United States.
+\item Solving of time critical project issues under customer's pressure. Number of various \textquote{MP block} software problems were resolved
+      and processing performance of UI images in customer's projects was improved.
+\item Peripheral domain support as the member of team. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support
+      for smear correction driver team. NV memory storages: FS bug fixing, NAND drivers timing optimizations. Display cluster: issues
+      related to video output (LCD, HDMI). Volatile memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral:
+      support for BSP (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug
+      fixing and new features implementation for FW burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic
       voltage management based on PID-controller.
-\item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
+\item SoC software trainings in \textit{CSR Israel} (formerly \textit{Zoran Corp}.): MATAM, Haifa.
 
 \end{rCompany}
-\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer, full-time}{Vladivostok, RU}
+\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer (full-time)}{Vladivostok, RU}
 
-\item Applied hardware development start-up.
-\item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
-\item Transformerless vacuum tube stereo amplifier prototying for headphones. \newline Simple SRPP cascade and preamplifier per channel.
-\item Prototype of the \textquote{Power over Ethernet} injector design and manufacturing. Physical layer of the IEEE
-      802.3af specification was implemented. The product was used in a number of computer network projects.
-\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by
-      \href{http://www.linear.com}{Linear Technology Corp}.
+\item Applied hardware development startup company.
+\item Mechanicalless manipulator prototyping as part of the project management software system: accel- and gyro-based console.
+\item Transformerless vacuum tube stereo amplifier prototying for headphones: simple SRPP cascade and preamplifier per channel.
+\item Prototype of the PoE injector (PSE device) designing and manufacturing. IEEE 802.3af full compatible implementation based on the LTC4263 IC by
+      \href{http://www.linear.com}{\textit{Linear Technology}}. The product was used in a number of computer network projects with different
+      sets of PD devices: \href{http://www.cisco.com}{\textit{Cisco}} routers, IP cameras and more.
 
 \end{rCompany}
 \end{rSection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{Skills}
+\begin{rSection}{optional experience}
+\begin{rCompany}{Dalpribor}{May 2016 -- August 2016}{Embedded Software Consultant (contract)}{Vladivostok, RU}
+
+\item Military avionics project of design bureau based on the \textquote{Baget} platform: VMEbus computer assembly with MIPS, DSP, ADC, RS-232
+      board modules and RS-232 sensor modules which is driven by OS2000 POSIX compatible RTOS.
+\item Leading developer left the company and head of bureau invited to help to cover open items which blocks initial delivery of the project to
+      the customer: to solve system stuck problem after 2 hours of autonomous operation and to fix wrong initialization of new DSP boards after
+      power up. First item relates to inverstigation of the toolchain, build system and code base to solve software problem. Second one -- to conversation
+      with \href{http://www.insys.ru}{\textit{InSys}} company which is developer of DSP boards to check ideas.
+\item Terms of the contract were covered completely ahead of time: 2.5 month instead of 4 by schedule.
+
+\end{rCompany}
+\end{rSection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{rSection}{skills}
 \begin{rItemize}
 
-\item \textbf{\textit{SW development}}
+\item \textbf{SW development}
 
-      Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on
-      assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom.
-      Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. Unit
-      test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator,
-      Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt.
-      Progressive system languages: Rust, Go.
+      Embedded C and C++ (source code mixing). C++11. STL. Boost. Interrupt- and event-driven design. Free reading and writing Assembler code
+      areas. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom, Buildroot.
+      Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers, LKM. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. UT
+      frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. VCS: Perforce, SVN, Git. Code inspection: Code Collaborator, Review
+      Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. iOS
+      apps: Swift. Progressive system languages: Rust, Go. Crash logs analyzing. Remote debugging (customer support). JTAG in-circuit emulation.
 
-\item \textbf{\textit{HW development}}
+\item \textbf{HW development}
 
-      Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components:
-      excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD,
-      Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and
-      impulse circuits.
+      Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. BOM selection: excellent guided
+      both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD,
+      Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit MCUs. Power electronics understanding: linear and
+      impulse circuits. EE lab equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function
+      generator, autotransformer and more.
 
-\item \textbf{\textit{Debugging}}
+\item \textbf{Languages}
 
-      Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems.
-      In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope,
-      function generator, autotransformer and more.
+      Russian (native), English (ability to hold conversation), \begin{CJK}{UTF8}{min}日本語\end{CJK} (elementary on N5 level)
 
-\item \textbf{\textit{Languages}}
-
-      Russian -- native \newline
-      English -- professional working proficiency \newline
-      \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
-
-\item \textbf{\textit{Miscellaneous}}
+\item \textbf{Miscellaneous}
 
       Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks. Experience in
-      transferring of knowledges to students: electronics and programming foundations.
+      transferring of knowledges: electronics and programming foundations. Driver license in progress: motorcycles, cars (manual and automatic
+      transmission).
 
 \end{rItemize}
 \end{rSection}
@@ -169,13 +185,13 @@ GPA: 3.86/4
 
 \begin{rSection}{Keywords}
 
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CLion, CMake, Code Collaborator,
-Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber,
-Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb,
-Linux, Make, Maxima, MCS-51, Mac OS, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon,
-PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC,
-Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack,
-zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, board bring up, BSP, Buildroot, C, C++11, CAN,
+CLion, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse,
+Eddystone, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW\&SW codesign, IEEE 802.3af, I2C, IAR, iBeacon,
+image sensor, iOS, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, LKM, Make, Maxima, MCS-51, macOS, microcontroller, MIPS, Mind Maps, MinGW,
+MkDocs, NMake, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
+C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, Swift, TCP/IP, \TeX,
+ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 
 \end{rSection}
 
@@ -184,7 +200,7 @@ zlib
 \begin{rSection}{Hobby and Interests}
 \begin{rHobby}
 
-\item Hi-Tech and impacting one on a human being, designing hardware and software
+\item Hi-Tech and impacting one on a human being, hardware and software codesign
 \item Physics, applied math, world economic
 \item Professional sports leagues: NHL, NFL, MLB
 \item Swimming (sports category), marine multi-athlon (sports category)
