Added link to Dalpribor site

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -120,7 +120,7 @@ GPA: 3.86/4
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{optional experience}
-\begin{rCompany}{Dalpribor}{May 2016 -- August 2016}{Embedded Software Consultant (contract)}{Vladivostok, RU}
+\begin{rCompany}{\href{http://dalpribor.ru}{Dalpribor}}{May 2016 -- August 2016}{Embedded Software Consultant (contract)}{Vladivostok, RU}
 
 \item Military avionics project of design bureau based on the \textquote{Baget} platform: VMEbus computer assembly with MIPS, DSP, ADC, RS-232
       board modules and RS-232 sensor modules which is driven by OS2000 POSIX compatible RTOS.
