Update according to new experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -82,10 +82,11 @@ GPA: 3.86/4
       GCC, MinGW, IAR).
 \item Data link layer protocol design and implementation for physical layers without data delivery guarantee to transparently integrate this
       capability via dedicated API (e.g. TM in case of data exchange over UART).
-\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} factories (TX, United States).
-      Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT project phases:
-      \href{https://www.nanit.com}{\textit{Nanit}} (baby monitor, Linux based product), \href{https://fusar.com}{\textit{Fusar}} (motorcycle
-      DVR), \href{http://www.glide.me}{\textit{Glide}} (Apple Watch wristcam, rigid-flex boards).
+\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} and \href{http://aqs-inc.com}{\textit{AQS}}
+      electronics factories (TX, CA, United States). Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
+      project phases: \href{https://www.nanit.com}{\textit{Nanit}} (baby monitor, Linux based product), \href{https://fusar.com}{\textit{Fusar}}
+      (motorcycle DVR), \href{http://www.glide.me}{\textit{Glide}} (Apple Watch wristcam, rigid-flex boards), \href{https://revl.com}{\textit{Revl}}
+      (action camera with motor stabilizer).
 \item Peripheral domain support as the member of SDK sub-team: embedded Linux and RTOS device drivers, FW burning tool features (Qt application)
       for QA lab, EE and PCB design review for customer's projects.
 \item \href{http://www.csr.com}{\textit{CSR}} contractor. Distributed support of the embedded software for ODM/OEM customers based on \textit{COACH}
