Update according to new experience

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -21,7 +21,7 @@
 \begin{rSection}{summary}
 
 Proficient skilled worker with a focus on the EECS: 6+ years in embedded systems design. I have built own experience
-through hardware and software codesign. Strong skills in electrical engineering, computer sciences and researching. Ability to
+through hardware and software codesign. Strong skills in electrical engineering, computer science and researching. Ability to
 produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team
 of professionals and to lead own product from nothing till mass production. Main areas of interest: consumer electronics, robotics,
 automotive and game industry, medical equipment, telecommunications, computer networks, internet of things, indoor navigation and more.
@@ -33,7 +33,7 @@ Looking for new opportunities to continue the career.
 
 \begin{rSection}{education}
 
-{\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
+{\bf \href{https://www.dvfu.ru/en/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
 M.Sc. Department of General Physics and Electronics. \newline
 \href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline
 GPA: 3.63/4
@@ -82,11 +82,12 @@ GPA: 3.86/4
       GCC, MinGW, IAR).
 \item Data link layer protocol design and implementation for physical layers without data delivery guarantee to transparently integrate this
       capability via dedicated API (e.g. TM in case of data exchange over UART).
-\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} and \href{http://aqs-inc.com}{\textit{AQS}}
-      electronics factories (TX, CA, United States). Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
-      project phases: \href{https://www.nanit.com}{\textit{Nanit}} (baby monitor, Linux based product), \href{https://fusar.com}{\textit{Fusar}}
+\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} (TX, United States),
+      \href{http://aqs-inc.com}{\textit{AQS}} (CA, United States) and \href{http://www.asia-optical.com/}{\textit{Asia Optical}} (Shenzhen, China)
+      electronics factories. Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
+      project phases: \href{https://www.nanit.com}{\textit{Nanit}} (smart baby monitor, embedded Linux based product), \href{https://fusar.com}{\textit{Fusar}}
       (motorcycle DVR), \href{http://www.glide.me}{\textit{Glide}} (Apple Watch wristcam, rigid-flex boards), \href{https://revl.com}{\textit{Revl}}
-      (action camera with motor stabilizer).
+      (action camera with motor stabilizer), \href{https://www.soloshot.com}{\textit{Soloshot}} (robotic cameraman).
 \item Peripheral domain support as the member of SDK sub-team: embedded Linux and RTOS device drivers, FW burning tool features (Qt application)
       for QA lab, EE and PCB design review for customer's projects.
 \item \href{http://www.csr.com}{\textit{CSR}} contractor. Distributed support of the embedded software for ODM/OEM customers based on \textit{COACH}
@@ -151,14 +152,16 @@ GPA: 3.86/4
 \item \textbf{HW development}
 
       Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. BOM selection: excellent guided
-      both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD,
+      both in through-hole and surface-mount packages. Routing and assembling of prototype PCBA: Eagle CAD, Sprint Layout, KiCAD,
       Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit MCUs. Power electronics understanding: linear and
       impulse circuits. EE lab equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function
       generator, autotransformer and more.
 
 \item \textbf{Languages}
 
-      Russian (native), English (ability to hold conversation), \begin{CJK}{UTF8}{min}日本語\end{CJK} (elementary on N5 level)
+      Russian (native) \newline
+      English (ability to hold conversation) \newline
+      \begin{CJK}{UTF8}{min}日本語\end{CJK} (elementary on N5 level)
 
 \item \textbf{Miscellaneous}
 
@@ -187,10 +190,10 @@ GPA: 3.86/4
 \begin{rSection}{Keywords}
 
 1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, board bring up, BSP, Buildroot, C, C++11, CAN,
-CLion, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse,
-Eddystone, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW\&SW codesign, IEEE 802.3af, I2C, IAR, iBeacon,
+CLion, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, customer support, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, DVT, Eagle CAD, Eclipse,
+Eddystone, eTraxis, EVT, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW\&SW codesign, IEEE 802.3af, I2C, IAR, iBeacon,
 image sensor, iOS, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, LKM, Make, Maxima, MCS-51, macOS, microcontroller, MIPS, Mind Maps, MinGW,
-MkDocs, NMake, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
+MkDocs, NMake, NPI, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
 C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, Swift, TCP/IP, \TeX,
 ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 
